@@ -162,6 +162,7 @@ Various bugfixes, small features, and a few experimental things:
 * ...various...
 * (bug 2067) Fixed crash on empty quoted HTML attribute
 * (bug 2079) Removed links to Special:Maintenance from movepagetext messages
+* Fix for reading incorrectly re-gzipped HistoryBlob entries
 
 
 === Caveats ===
